--- a/trunk/src/js/component/public/btn.less
+++ b/trunk/src/js/component/public/btn.less
@@ -11,6 +11,9 @@
         border-radius:@u*4;
         border:0 none;
         cursor: pointer;
+        outline: none;
+        user-select: none;
+        transition: all .3s cubic-bezier(.645,.045,.355,1);
     }
 
     &-btn-primary{
