--- a/trunk/src/js/component/tree/index.less
+++ b/trunk/src/js/component/tree/index.less
@@ -216,7 +216,7 @@
         align-items: center;
         flex-direction:row-reverse;
         flex-wrap: wrap;
-        >.ccwork-btn{
+        >button{
             padding: 0 @u*10;
             min-width: @u*120;
             margin: @u*5;
