--- a/trunk/src/js/component/tree/index.less
+++ b/trunk/src/js/component/tree/index.less
@@ -293,7 +293,7 @@
                     justify-content: center;
                     box-sizing: content-box;
                     font-size: 20px;
-                    .tree-icon{
+                    .zy-icon{
                         width: 0.5em;
                         height: 0.5em;
                     }
