--- a/trunk/src/js/component/icon/index.less
+++ b/trunk/src/js/component/icon/index.less
@@ -1,7 +1,9 @@
 /**
 * 字体图标
 */
-.ccwork-icon {
+@import '~global/var.less';
+
+.@{prefix}-icon {
     width: 1em; height: 1em;
     vertical-align: -0.15em;
     fill: currentColor;
