--- a/trunk/src/js/component/tree/index.less
+++ b/trunk/src/js/component/tree/index.less
@@ -32,11 +32,13 @@
 }
 // 主框
 .tree-main{
+
     *{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
     }
+    line-height: 1;
     color: @c1;
     font-size: 12px;
     width: @u*661;
@@ -45,34 +47,6 @@
     overflow: hidden;
     border: 1px solid #dae0e6;
     box-shadow: 0 0 @u*5 rgba(0, 0, 0, 0.2);
-    
-    /**滚动条*/
-    /**
-    .scroll{
-        //height:100%;
-        // margin-right: @u*5px;
-        overflow-y:auto;
-        &::-webkit-scrollbar{
-            width: @u*(8+5);
-        }
- 
-        // 滚动曹
-        &::-webkit-scrollbar-track{
-            width:20px;
-        }
-        &::-webkit-scrollbar-track-piece{
-            width:10px;
-        }
-        // 滑快
-        &::-webkit-scrollbar-thumb{
-            width:8px;
-            min-height:10px;
-            // background-color:#e6eaf0;
-            background-image:linear-gradient(to right,#e6eaf0 8px,transparent 5px);
-            border-radius:1px;
-        }
-    }
-    */
     // 头
     .tree-header{
         text-align: center;
