--- a/trunk/src/less/pages/index.less
+++ b/trunk/src/less/pages/index.less
@@ -85,7 +85,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 100000;
+    // z-index: 100000;
     display: flex;
     align-items: center;
     justify-content: center;
