--- a/trunk/src/js/component/tree/index.less
+++ b/trunk/src/js/component/tree/index.less
@@ -114,8 +114,12 @@
                         .list-content{
                             flex: 1;
                             max-width: 80%;
+                            padding-right:@u*10;
                             *{
                                 text-overflow: ellipsis;white-space: nowrap;overflow: hidden;
+                            }
+                            p{
+                                color: @c3;
                             }
                         }
                         i{
