修改选人控件

--- a/trunk/src/js/component/tree/index.less
+++ b/trunk/src/js/component/tree/index.less
@@ -94,7 +94,7 @@
             &-list{
                 position: absolute;
                 top: @u*42;
-                height: @u*(344 - 10);
+                max-height: @u*(344 - 10);
                 left: 0;
                 width: 100%;
                 z-index: 100;
