--- a/trunk/src/js/component/tree/index.less
+++ b/trunk/src/js/component/tree/index.less
@@ -3,17 +3,34 @@
 // 头像
 .tree-main{
     .tree-avatar{
-        width: @u*22;
-        height: @u*22;
-        // margin-right: @u*10;
-        border-radius: @u*3;
-        overflow: hidden;
-        text-align: center;
-        line-height: @u*22;
-        color: #fff;
-        img{
-            width: 100%;
-            height: 100%;
+        @w: @u*22;
+        @h: @u*22;
+        display: flex;
+        >*{
+            margin-left: @u*8;
+            &:first-child{
+                margin-left:0;
+            }
+        }
+        &--icon{
+            flex: 1;
+            width: @w;
+            height: @h;
+        }
+        &--img{
+            flex: 1;
+            width: @w;
+            height: @h;
+        }
+        &--name {
+            flex: 1;
+            width: @w;
+            height: @h;
+            border-radius: @u*3;
+            overflow: hidden;
+            text-align: center;
+            line-height: @h;
+            color: #fff;
         }
     }
 }
