--- a/trunk/src/js/component/tree/index.less
+++ b/trunk/src/js/component/tree/index.less
@@ -156,23 +156,42 @@
         // 左右2边内容
         &-left,&-right{
             position: relative;
-            padding: @box-p 0 0 ;
+            // padding: @box-p 0 0 ;
+            margin: @box-p 0 @box-p 0;
+            display: flex;
+            flex-direction: column;
+            .scroll{
+                flex: 1;
+                overflow: auto;
+                &::-webkit-scrollbar{
+                    width: @u*8;
+                }
+                &::-webkit-scrollbar-thumb{
+                    min-height: @u*10;
+                    border-radius:@u*100;
+                    background: rgba(204, 204, 204, 0.56);
+                    &:hover{
+                        background: rgba(204, 204, 204, 1);
+                    }
+                }
+            }
         }
         &-left{
             width: @lw;
-            margin: @box-p 0 @box-p 0;
-            padding-top: 0;
             border-right: 1px solid #dae0e6;
+            
             &-top{
                 padding: 0 @box-p;
                 >p{
                     line-height: @u*32;
                 }
             }
-            .scroll{
-                max-height: calc(~'100% - '@u*32*2);
-                height: 100%;
-            }
+            // .scroll{
+            //     // max-height: calc(~'100% - '@u*32*2);
+            //     height: 100%;
+            //     flex: 1;
+            //     overflow: auto;
+            // }
         }
         &-right{
             flex: 1;
@@ -195,11 +214,11 @@
                     cursor: pointer;
                 }
             }
-            .scroll{
-                max-height: calc(~'100% - '@u*32+10);
-                height: 100%;
-                // margin-right: @u*-5;
-            }
+            // .scroll{
+            //     max-height: calc(~'100% - '@u*32+10);
+            //     height: 100%;
+            //     // margin-right: @u*-5;
+            // }
         }
         
     }
