--- a/trunk/src/less/pages/index.less
+++ b/trunk/src/less/pages/index.less
@@ -117,7 +117,6 @@
     box-shadow: 0 0 @u*5 rgba(0, 0, 0, 0.2);
     
     /**滚动条*/
-    /**
     .scroll{
         //height:100%;
         // margin-right: @u*5px;
@@ -128,21 +127,20 @@
  
         // 滚动曹
         &::-webkit-scrollbar-track{
-            width:20px;
+            width: @u*20;
         }
         &::-webkit-scrollbar-track-piece{
-            width:10px;
+            width:@u*10;
         }
         // 滑快
         &::-webkit-scrollbar-thumb{
-            width:8px;
-            min-height:10px;
+            width: @u*8;
+            min-height: @u*10;
             // background-color:#e6eaf0;
-            background-image:linear-gradient(to right,#e6eaf0 8px,transparent 5px);
-            border-radius:1px;
+            background-image:linear-gradient(to right,#e6eaf0 @u*8,transparent @u*5);
+            border-radius:@u*1;
         }
     }
-    */
     // 头
     .tree-header{
         text-align: center;
