--- a/trunk/src/less/global/var-mobile.less
+++ b/trunk/src/less/global/var-mobile.less
@@ -1,10 +1,8 @@
 @charset "utf-8";
 
-@prefix: zy;
-
-@u:1px; // 设计图大小
-@multiple:1;// 
-@isPc:true;//
+@u:10/1080rem; // 设计图大小
+@multiple:3;// 设计图和页面的倍数(pc端改成1
+@isPc:false;//
 // 颜色
 @c1:#32373C; // 最浓字体色
 @c2:#979CA4; // (副标题的颜色
@@ -13,12 +11,13 @@
 @c4:#459EF2; // 超链接的颜色
 
 // 字体大小
-@fs1:16 * @multiple;
-@fs2:14 * @multiple;
-@fs3:12 * @multiple;
+@fs1:17 * @multiple;
+@fs2:15 * @multiple;
+@fs3:13 * @multiple;
+@fs4:12 * @multiple;
 // 背景色
 @bgc1:#F7F7F7;
 // 分割线颜色
-@bc1:#DAE0E6; // 分割线颜色
+@bc1:#C6CFD8; // web手机端分割线颜色
 // 图片路径
-@pimg:"~img";
+@pimg:"~img/";
