--- a/src/js/component/tree/index.less
+++ b/src/js/component/tree/index.less
@@ -55,6 +55,9 @@
     .header-right,.header-left{
         padding: @u*8;
     }
+    .header-right{
+        cursor: pointer;
+    }
     
 }
 @box-lw:@u*320;
