其他杂七杂八的

--- a/src/less/global/mixins.less
+++ b/src/less/global/mixins.less
@@ -1,7 +1,7 @@
 //
 // mixins 自定义函数
 //---------------------------------------
-
+@import './_animation.less';
 // 设置大小
 //----------------------------
 .size(@width, @height) {
