--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import "./color.less";
+
 @prefix: zy;
 
 @u:1px; // 设计图大小
@@ -10,7 +12,7 @@
 @c2:#979CA4; // (副标题的颜色
 @c3:#BEC7D0; // 最浅(待选待填的颜色
 
-@c4:#459EF2; // 超链接的颜色
+@c4:#489EF3; // 超链接的颜色
 
 // 字体大小
 @fs1:16 * @multiple;
