--- a/src/js/component/button/index.less
+++ b/src/js/component/button/index.less
@@ -17,6 +17,7 @@
     &.@{prefix}-button__sidabled{
         background: linear-gradient(hsv(@hue, .40, 1), hsv(@hue, .40, .95));
         border-color: hsv(@hue, .30, .85);
+        color: @fColor;
         cursor: no-drop;
     }
     // 幽灵按钮
