--- a/src/js/component/modal/modal.less
+++ b/src/js/component/modal/modal.less
@@ -5,7 +5,7 @@
 @import "~global/mixins.less";
 
 .@{prefix}-modal {
-    width: @u*520;
+    width: @u*460;
     border-radius: @u*4;
     border: 1px solid @bc1;
     background: #fff;
@@ -37,6 +37,7 @@
     &--body{
         .dpr(@fs2);
         padding: @u*20;
+        min-height: @u*100;
     }
     &--footer{
         border-top: 1px solid @bc1;
