--- a/src/js/component/mask/index.less
+++ b/src/js/component/mask/index.less
@@ -14,6 +14,10 @@
     justify-content: center;
     align-items: center;
     background: rgba(55,55,55,.6);
+    &__hide{
+        display: none;
+    }
     &--box{
+        
     }
 }
