--- a/src/js/component/modal/modal.less
+++ b/src/js/component/modal/modal.less
@@ -10,6 +10,7 @@
     border: 1px solid @bc1;
     background: #fff;
     box-shadow: 0 5px 18px 0 rgba(0,34,77,0.10);
+    margin: @u*150 auto 0;
     &--head{
         .dpr(@fs2);
         padding: @u*12 @u*20;
