--- a/src/js/component/mask/index.less
+++ b/src/js/component/mask/index.less
@@ -10,9 +10,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     background: rgba(55,55,55,.6);
     &__hide{
         display: none;
