--- a/src/js/component/modal/confirm.less
+++ b/src/js/component/modal/confirm.less
@@ -4,6 +4,39 @@
 @import "~global/var.less";
 @import "~global/mixins.less";
 
-.@{prefix}-confirm {
-    
+@_prefix: ~'@{prefix}-confirm';
+// 设置各种icon的type情况颜色
+.setIconColor(@name){
+    &__@{name}{
+        .@{_prefix}--icon{
+            @c: ~'@{name}-c';
+            color: @@c;
+        }
+    }
+}
+.@{_prefix} {
+    padding-left: @u*40;
+    position: relative;
+    &--title{
+        color: @c1;
+        line-height: @u*30;
+        font-weight: bold;
+    }
+    &--icon{
+        position: absolute;
+        left: 0;
+        top: 0;
+        .@{prefix}-icon{
+            width: @u*30;
+            height: @u*30;
+        }
+    }
+    &--body{
+        color: @c1;
+    }
+    .setIconColor(success);
+    .setIconColor(info);
+    .setIconColor(error);
+    .setIconColor(warning);
+    .setIconColor(confirm);
 }
