--- a/src/less/global/color.less
+++ b/src/less/global/color.less
@@ -3,3 +3,15 @@
 @c3:#BEC7D0; // 最浅(待选待填的颜色
 
 @c4:#459EF2; // 超链接的颜色
+
+@success-c:#2FC16C;
+@info-c:#ffffff;
+@error-c:#E03200;
+@warning-c:#FFB843;
+@confirm-c:#fff;
+
+
+// 背景色
+@bgc1:#F7F7F7;
+// 分割线颜色
+@bc1:#DAE0E6; // 分割线颜色
