--- a/src/js/component/button/index.less
+++ b/src/js/component/button/index.less
@@ -1,6 +1,10 @@
 @import '~global/var.less';
 @import '~global/mixins.less';
 
+@_prefix: ~'@{prefix}-button';
+@large: @u*36; // 大
+@in: @u*30; // 中
+@small: @u*22; // 小
 // 可变化按钮样式
 .establish-btn(@color, @fColor: #fff) {
     @hue: hue(@color);
@@ -14,14 +18,14 @@
     &:active{
         background: linear-gradient(hsv(@hue, .75, .70), hsv(@hue, .75, .70));
     }
-    &.@{prefix}-button__sidabled{
+    &.@{_prefix}__sidabled{
         background: linear-gradient(hsv(@hue, .40, 1), hsv(@hue, .40, .95));
         border-color: hsv(@hue, .30, .85);
         color: @fColor;
         cursor: no-drop;
     }
     // 幽灵按钮
-    &.@{prefix}-button__ghost {
+    &.@{_prefix}__ghost {
         background: transparent;
         color: @color;
         &:hover{
@@ -42,7 +46,7 @@
         }
     }
     // 默认
-    &.@{prefix}-button__default{
+    &.@{_prefix}__default{
         color: @color;
         background: linear-gradient(#fff , #f6f6f6);
         border-color: #DAE0E6;
@@ -57,7 +61,7 @@
             background: linear-gradient(hsv(@hue, .75, .70), hsv(@hue, .75, .70));
             border-color: hsv(@hue, .75, .70);
         }
-        &.@{prefix}-button__sidabled{
+        &.@{_prefix}__sidabled{
             background: linear-gradient(#FAFAFA, #FAFAFA);
             color: #BEC7D0;
             border-color: #DAE0E6;
@@ -65,12 +69,12 @@
         }
     }
 }
-.@{prefix}-button {
+.@{_prefix} {
     .dpr(@fs2);
     min-width:@u*90;
-    min-height:@u*30;
-    line-height:@u*30;
-    padding: 0 @u*20;
+    min-height: @in;
+    line-height: @in;
+    padding: 0 @in/2;
     text-align:center;
     border-radius:@u*3;
     // border:0 none;
@@ -91,7 +95,7 @@
             background: linear-gradient(#DAE0E6, #DAE0E6);
             border-color: #C3CED9;
         }
-        &.@{prefix}-button__sidabled{
+        &.@{_prefix}__sidabled{
             background: linear-gradient(#FAFAFA, #FAFAFA);
             color: #BEC7D0;
             border-color: #DAE0E6;
@@ -100,30 +104,30 @@
     // }
     // 主要
     &--primary{
-        .establish-btn(#489EF3);
+        .establish-btn(@primary-c);
     }
     // 危险
     &--danger{
-        .establish-btn(#E03200);
+        .establish-btn(@danger-c);
     }
     // 警告
     &--warning{
-        .establish-btn(#CC9200);
+        .establish-btn(@warning-c);
     }
     // 按钮大小
     &__large{
         .dpr(@fs1);
         // min-width:@u*60;
-        min-height:@u*36;
-        line-height:@u*36;
-        padding: 0 @u*22;
+        min-height: @large;
+        line-height: @large;
+        padding: 0 @large/2;
     }
     &__small{
         .dpr(@fs3);
         min-width:@u*60;
-        min-height:@u*22;
-        line-height:@u*22;
-        padding: 0 @u*15;
+        min-height: @small;
+        line-height: @small;
+        padding: 0 @small/2;
     }
     &--icon{
         &+&,+span{
@@ -131,7 +135,7 @@
         }
     }
     &__load {
-        .@{prefix}-button--icon{
+        .@{_prefix}--icon{
             svg {
                 animation: loadingCircle 1s infinite linear;
             }
