--- a/src/less/global/color.less
+++ b/src/less/global/color.less
@@ -2,14 +2,15 @@
 @c2:#979CA4; // (副标题的颜色
 @c3:#BEC7D0; // 最浅(待选待填的颜色
 
-@c4:#459EF2; // 超链接的颜色
+@c4:#489EF3; // 超链接的颜色
 
 @success-c:#2FC16C;
 @info-c:#ffffff;
 @error-c:#E03200;
 @warning-c:#FFB843;
 @confirm-c:#fff;
-
+@danger-c: @error-c;
+@primary-c: @c4;// 489EF3
 
 // 背景色
 @bgc1:#F7F7F7;
