--- a/src/js/component/mask/index.less
+++ b/src/js/component/mask/index.less
@@ -4,7 +4,7 @@
 @import "~global/var.less";
 @import "~global/mixins.less";
 
-.@{prefix}-mask {
+.@{px-mask} {
     position: fixed;
     top:0;
     left: 0;
