--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -16,3 +16,15 @@
 
 // 图片路径
 @pimg:"~img";
+
+
+@px-alert: ~'@{prefix}-alert';
+@px-button: ~'@{prefix}-button';
+@px-icon: ~'@{prefix}-icon';
+@px-input: ~'@{prefix}-input';
+@px-mask: ~'@{prefix}-mask';
+@px-confirm: ~'@{prefix}-confirm';
+@px-modal: ~'@{prefix}-modal';
+@px-scroll: ~'@{prefix}-scroll';
+@px-super-dom: ~'@{prefix}-super-dom';
+@px-tree: ~'@{prefix}-tree';
