--- a/src/js/component/tree/index.less
+++ b/src/js/component/tree/index.less
@@ -5,6 +5,7 @@
 // 头像
 // .tree-main{
 
+
 // }
 // 大外框
 .tree-fixed{
@@ -166,6 +167,12 @@
     }
 }   
 // 一些组件--------------------------------
+.tree-checkbox{
+    .@{px-icon} {
+        .dpr(18);
+        color: @c4;
+    }
+}
 .tree-avatar{
     @w: @u*22;
     @h: @u*22;
@@ -248,106 +255,6 @@
     
 }
 
-// 搜索
-.tree-search{
-    // position: relative;
-    position: static;
-    border: 1px solid @bc1;
-    margin-top: @u*10;
-    border-radius: @u*100;
-    display: flex;
-    align-items: center;
-    >i{
-        width: @u*30;
-        text-align: center;
-        font-size: @u*18;
-        &.tree-search--close{
-            transition: 0.2s;
-            font-size: @u*15;
-            color: @c3;
-            cursor: pointer;
-            &:hover{
-                transform: scale(1.2);
-                color: @c2;
-            }
-        }
-    }
-    >input{
-        flex: 1;
-        height: @u*30;
-        border: none;
-        outline:none;
-        background: transparent;
-        margin-right: @u*14;
-    }
-    // 搜索列表数据
-    &-list{
-        @topH: @u*52;;
-        position: absolute;
-        top: @topH;
-        height: calc(~'100% - @{topH}');
-        left: 0;
-        width: 100%;
-        z-index: 100;
-        background: #fff;
-        ul{
-            li{
-                padding: @u*5 @u*10;
-                display: flex;
-                align-items: center;
-                transition: 0.2s;
-                cursor: pointer;
-                .tree-avatar{
-                    margin-right: @u*5;
-                }
-                &:hover{
-                    background: @ch1;
-                }
-                .list-content{
-                    .dpr(@fs2);
-                    .slh();
-                    flex: 1;
-                    padding-right:@u*8;
-                    display: flex;
-                    align-items: center;
-                    flex-wrap: wrap;
-                    *{
-                        .slh();
-                        max-width: 100%;
-                        margin-right: @u*5;
-                        line-height: 1.3;
-                    }
-                    small{
-                        color: @c3;
-                    }
-                }
-                i{
-                    border-radius: 50%;
-                    border: 1px solid @c3;
-                    height: @u*18;
-                    width: @u*18;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 4px;
-                }
-            }
-        }
-    }
-    // 组
-    &-group{
-        &--title{
-            .slh();
-            .dpr(@fs2);
-            height: @u*32;
-            line-height: @u*32;
-            margin: 0 @u*8;
-            border-bottom: 1px solid @bc1;
-            font-weight: normal;
-            color: @c2;
-        }
-    }
-}
 // 联系人样式
 .tree-children{
     &-ul{
@@ -439,22 +346,6 @@
             small{
                 color: @c3;
             }
-        }
-    }
-    &-checkbox{
-        border-radius: 50%;
-        border: 1px solid @c3;
-        height: @u*18;
-        width: @u*18;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: @u*4;
-        margin-left: @u*5;
-        box-sizing: border-box;
-        .@{px-icon} {
-            .dpr(18);
-            color: @c4;
         }
     }
     &-son{
