新增checkbox组件配置

--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -28,3 +28,4 @@
 @px-scroll: ~'@{prefix}-scroll';
 @px-super-dom: ~'@{prefix}-super-dom';
 @px-tree: ~'@{prefix}-tree';
+@px-checkbox: ~'@{prefix}-checkbox';
