--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -29,3 +29,4 @@
 @px-super-dom: ~'@{prefix}-super-dom';
 @px-tree: ~'@{prefix}-tree';
 @px-checkbox: ~'@{prefix}-checkbox';
+@px-loading: ~'@{prefix}-loading';
