--- a/src/js/component/icon/font/demo_fontclass.html
+++ b/src/js/component/icon/font/demo_fontclass.html
@@ -13,12 +13,6 @@
         <ul class="icon_lists clear">
             
                 <li>
-                <i class="icon iconfont icon-loading"></i>
-                    <div class="name">loading</div>
-                    <div class="fontclass">.icon-loading</div>
-                </li>
-            
-                <li>
                 <i class="icon iconfont icon-search"></i>
                     <div class="name">搜索</div>
                     <div class="fontclass">.icon-search</div>
@@ -100,6 +94,12 @@
                 <i class="icon iconfont icon-close"></i>
                     <div class="name">close</div>
                     <div class="fontclass">.icon-close</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-loading"></i>
+                    <div class="name">加载</div>
+                    <div class="fontclass">.icon-loading</div>
                 </li>
             
         </ul>
