--- a/src/js/component/icon/font/demo_symbol.html
+++ b/src/js/component/icon/font/demo_symbol.html
@@ -29,14 +29,6 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-loading"></use>
-                    </svg>
-                    <div class="name">loading</div>
-                    <div class="fontclass">#icon-loading</div>
-                </li>
-            
-                <li>
-                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-search"></use>
                     </svg>
                     <div class="name">搜索</div>
@@ -145,6 +137,14 @@
                     </svg>
                     <div class="name">close</div>
                     <div class="fontclass">#icon-close</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-loading"></use>
+                    </svg>
+                    <div class="name">加载</div>
+                    <div class="fontclass">#icon-loading</div>
                 </li>
             
         </ul>
