--- a/src/js/component/icon/font/demo_unicode.html
+++ b/src/js/component/icon/font/demo_unicode.html
@@ -33,12 +33,6 @@
         <ul class="icon_lists clear">
             
                 <li>
-                <i class="icon iconfont">&#xe601;</i>
-                    <div class="name">loading</div>
-                    <div class="code">&amp;#xe601;</div>
-                </li>
-            
-                <li>
                 <i class="icon iconfont">&#xe628;</i>
                     <div class="name">搜索</div>
                     <div class="code">&amp;#xe628;</div>
@@ -120,6 +114,12 @@
                 <i class="icon iconfont">&#xe64a;</i>
                     <div class="name">close</div>
                     <div class="code">&amp;#xe64a;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe601;</i>
+                    <div class="name">加载</div>
+                    <div class="code">&amp;#xe601;</div>
                 </li>
             
         </ul>
