修正tree中头像是显示

--- a/src/js/component/tree/index.less
+++ b/src/js/component/tree/index.less
@@ -193,6 +193,10 @@
     &--img{
         width: @w;
         height: @h;
+        display: none;
+        &&__show{
+            display: block;
+        }
     }
     &--name {
         width: @w;
