--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -30,3 +30,4 @@
 @px-tree: ~'@{prefix}-tree';
 @px-checkbox: ~'@{prefix}-checkbox';
 @px-loading: ~'@{prefix}-loading';
+@px-message: ~'@{prefix}-message';
