--- a/src/js/component/loading/index.less
+++ b/src/js/component/loading/index.less
@@ -7,21 +7,34 @@
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.1);
+    &::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1000;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0)
+    }
     &--spin{
         &::before{  
             animation: loadingCircle 1s infinite linear;
         }
     }
+    // 小号
     &__small{
         .@{px-loading}--spin{
             .dpr(14);
         }
     }
+    // 默认大小
     &__default{
         .@{px-loading}--spin{
             .dpr(22);
         }
     }
+    // 大号
     &__large{
         .@{px-loading}--spin{
             .dpr(32);
@@ -31,9 +44,9 @@
     &--box{
         color: @c4;
         position: absolute;
-        display: inline;
+        // display: inline;
         left: 50%;
-        top: 50%;
+        top: 100 - 61.8%; // 完美黄金比例！！！！！鼓掌啪啪啪啪！！
         transform: translate(-50%, -50%);
         text-align: center;
         z-index: 100;
@@ -45,16 +58,18 @@
     &--children{
         opacity: .7;
         filter: blur(.5px);
+        height: 100%;
+        width: 100%;
     }
     &--mask-box {
         position: absolute;
-        width: 150px;
-        height: 100px;
+        width: @u*150;
+        height: @u*100;
         left: 50%;
         top: 50%;
         transform: translate(-50%,-50%);
         background: rgba(64, 64, 64, 0.24);
-        border-radius: 4px;
+        border-radius: @u*4;
     }
 }
 
